# domain-for-sale

./: .gitignore  LICENSE  README.md
domain-for-sale/: Cargo.toml  env-example
domain-for-sale-ui/: env-example  index.html  package.json  tailwind.config.js
domain-for-sale-ui/src/: App.vue  style.css
domain-for-sale-ui/src/components/: Toast.vue
domain-for-sale-ui/src/types/: resp.d.ts
domain-for-sale/assets/: index.html
domain-for-sale/assets/assets/: index-ByWrY2Ef.css  index-DsioELh4.js  index-KNJpB7Hx.js
domain-for-sale/src/: asset.rs  captcha.rs  config.rs  err.rs  form.rs  handler.rs  lib.rs  mail.rs  main.rs  resp.rs  state.rs
domain-for-sale/src/assets/: index.html
domain-for-sale/src/assets/assets/: index-86txqKpy.js  index-B_0PVSt7.js  index-Bb_QBO83.css
