[package]
name = "domain-for-sale"
version = "0.1.0"
edition = "2021"
authors = ["axum.rs <team@axum.rs>"]
license = "MIT"
repository = "https://github.com/axumrs/domain-for-sale"
homepage = "https://axum.rs"
description = "域名转让"

[dependencies]
tokio = { version = "1", features = ["full"] }
axum = "0.7"
rust-embed = "8.5"
mime_guess = "2.0"
serde = { version = "1", features = ["derive"] }
reqwest = { version = "0.12", features = ["json"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dotenv = "0.15"
config = { version = "0.14" }
validator = { version = "0.18", features = ["derive"] }
anyhow = "1"
lettre = "0.11"
